--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,19 +7,20 @@ license = "MIT"
 repository = "https://github.com/jakobwesthoff/retropulse"
 default-run = "retropulse"
 edition = "2021"
-rust-version = "1.60"
+rust-version = "1.81"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.4", features = [] }
+tauri-build = { version = "2.0.0-rc", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.7.2", features = ["dialog-open"] }
+tauri = { version = "2.0.0-rc", features = [] }
 libopenmpt-sys = "0.3.0"
 cpal = "0.15.2"
+tauri-plugin-dialog = "2.0.0-rc"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
