--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri = { version = "2.0.0-rc", features = [] }
 libopenmpt-sys = "0.3.0"
 cpal = "0.15.2"
 tauri-plugin-dialog = "2.0.0-rc"
+uuid = { version = "1.10.0", features = ["v4"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
