--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,13 +17,14 @@ tauri-build = { version = "2.0.0-rc", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-rc", features = [] }
+tauri = { version = "2.0.0-rc", features = [ "macos-private-api", "tray-icon"] }
 libopenmpt-sys = "0.3.0"
 cpal = "0.15.2"
 tauri-plugin-dialog = "2.0.0-rc"
 uuid = { version = "1.10.0", features = ["v4"] }
 anyhow = "1.0.89"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
+tauri-plugin-positioner = { version = "2.0.0-rc", features = ["tray-icon"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
