--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "2.0.0-rc", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-rc", features = [ "macos-private-api", "tray-icon"] }
+tauri = { version = "2.0.0-rc", features = [ "macos-private-api", "tray-icon", "image-png"] }
 libopenmpt-sys = "0.3.0"
 cpal = "0.15.2"
 tauri-plugin-dialog = "2.0.0-rc"
