--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,21 +13,28 @@ rust-version = "1.81"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc", features = [] }
+tauri-build = { version = "^2.0.0", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "2.0.0-rc", features = [ "macos-private-api", "tray-icon", "image-png"] }
+tauri = { version = "^2.2.0", features = [
+    "macos-private-api",
+    "tray-icon",
+    "image-png",
+] }
 libopenmpt-sys = "0.3.0"
 cpal = "0.15.2"
-tauri-plugin-dialog = "2.0.0-rc"
+tauri-plugin-dialog = "^2.2.0"
 uuid = { version = "1.10.0", features = ["v4"] }
 anyhow = "1.0.89"
 crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
-tauri-plugin-positioner = { version = "2.0.0-rc", features = ["tray-icon"] }
+tauri-plugin-positioner = { version = "^2.2.0", features = ["tray-icon"] }
 zip = "2.2.0"
-image = {version = "0.25.2", features = ["bmp", "png"], default-features = false}
+image = { version = "0.25.2", features = [
+    "bmp",
+    "png",
+], default-features = false }
 base64 = "0.22.1"
 config = "0.14.0"
 toml = "0.8.19"
